--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
 
@@ -17,8 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/back_border"
+            android:layout_marginTop="10dp"
             android:text="마이페이지"
             android:textSize="23dp"
             android:textStyle="bold" />
@@ -28,7 +27,7 @@
             android:id="@+id/mypage_personalimg"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             app:srcCompat="@drawable/user" />
 
         <TextView
@@ -39,6 +38,33 @@
             android:gravity="center"
             android:text="박재민"
             android:textSize="18dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/back_border_corner_round"
+            android:layout_marginLeft = "15dp"
+            android:layout_marginRight="15dp">
+
+            <ImageView
+                android:id="@+id/membershipIcon"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                app:srcCompat="@drawable/membershipicon1" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="3"
+                android:gravity="center_vertical"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="멤버십등급" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -52,7 +78,14 @@
                 android:layout_height="40dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/back_corner_round"
+                android:backgroundTint="@color/lightGray"
                 android:text="팔로워" />
+            <View
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/lightGray"/>
 
             <Button
                 android:id="@+id/followingBtn"
@@ -60,43 +93,121 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/back_corner_round"
+                android:backgroundTint="@color/lightGray"
                 android:text="팔로잉" />
         </LinearLayout>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:background="@drawable/back_border"
-            android:text="관심목록"
+            android:layout_marginRight="15dp"
+            android:text="관심 목록"
             android:textSize="18dp"
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp">
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center">
 
             <Button
                 android:id="@+id/placeScrapBtn"
-                android:layout_width="80dp"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_marginRight="20dp"
+                android:layout_weight="1"
                 android:background="@drawable/back_corner_round"
-                android:text="팔로워" />
+                android:backgroundTint="@color/lightGray"
+                android:layout_marginRight="10dp"
+                android:text="장소 스크랩" />
 
             <Button
                 android:id="@+id/activityScrapBtn"
-                android:layout_width="80dp"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_marginLeft="20dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/back_corner_round"
-                android:text="팔로잉" />
+                android:backgroundTint="@color/lightGray"
+                android:text="액티비티 스크랩" />
         </LinearLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:text="나의 리뷰"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/lightGray"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="이벤트"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <Button
+            android:id="@+id/enviteFriendBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="친구 초대"
+            android:backgroundTint="#fff"
+            android:gravity="left" />
+        <Button
+            android:id="@+id/promotionBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="프로모션"
+            android:backgroundTint="#fff"
+            android:gravity="left" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/lightGray"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="설정"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+        <Button
+            android:id="@+id/settingBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="개인 설정"
+            android:backgroundTint="#fff"
+            android:gravity="left" />
 
     </LinearLayout>
 </ScrollView>
