--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -10,18 +10,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
-
-        <TextView
-            android:id="@+id/textView"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
-            android:text="마이페이지"
-            android:textSize="23dp"
-            android:textStyle="bold" />
-
+            android:background="@drawable/back_border"
+            android:layout_gravity="left">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="마이페이지"
+                android:textSize="23dp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/mypage_personalimg"
