--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
         android:layout_marginBottom="10dp"
         android:background="@color/lightGray"/>
     <Button
+        android:id="@+id/nonMemberBtn"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="비회원으로 이용하기"/>
