--- a/app/src/main/res/layout/fragment_place.xml
+++ b/app/src/main/res/layout/fragment_place.xml
@@ -30,6 +30,17 @@
             android:text="장소"
             android:textSize="23dp"
             android:textStyle="bold" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="장소 입력"
+            android:textSize="23dp"
+            android:id="@+id/writeplace"
+            />
+
+
     </LinearLayout>
 
     <LinearLayout
