--- a/app/src/main/res/layout/row_activity.xml
+++ b/app/src/main/res/layout/row_activity.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/writerText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/activityIdText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimary"
+            android:text="id" />
+
+        <TextView
+            android:id="@+id/writerText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:gravity="left"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/subjectText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            android:text="ㅠㅠ" />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/activityTypeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="20dp"
         android:gravity="left"
-        android:text="TextView" />
-
-    <TextView
-        android:id="@+id/subjectText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="left"
-        android:text="TextView" />
-
+        android:text="액티비티 타입" />
 
 </LinearLayout>
