--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -46,7 +46,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/writeButton"
+            android:id="@+id/AwriteButton"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="left"
