--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="darkGray">#5C5C5C</color>
     <color name="lightGray">#E8E6E6</color>
+    <color name="white">#FFFFFF</color>
 </resources>
