--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
     <EditText
@@ -51,7 +52,7 @@
         android:layout_marginRight="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@color/lightGray"/>
+        android:background="@color/white"/>
     <Button
         android:id="@+id/nonMemberBtn"
         android:layout_width="300dp"
