--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:gravity="left"
+    android:background="@color/white"
     android:layout_margin="15dp">
     <Button
         android:id="@+id/activity_submitBtn"
