--- a/app/src/main/res/layout/row_person.xml
+++ b/app/src/main/res/layout/row_person.xml
@@ -2,43 +2,148 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:background="@color/white"
+    android:layout_height="130dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+
+    android:background="@drawable/back_corner_circle"
     android:orientation="horizontal">
 
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:id="@+id/personImg"
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
         app:srcCompat="@drawable/user" />
 
-    <TextView
-        android:id="@+id/pWriterText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="20dp"
-        android:gravity="left"
-        android:text="TextView" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/pSubjectText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_weight="1"
-        android:gravity="left"
-        android:text="TextView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <TextView
+                android:id="@+id/pWriterText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="박재민"
+                android:textSize="17dp"
+                android:textStyle="bold"
+                android:layout_gravity="left"/>
+
+            <ImageView
+                android:id="@+id/membership"
+                android:layout_width="17dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                app:srcCompat="@drawable/icon_gyoyang" />
+
+<!--            <Button-->
+<!--                android:layout_width="55dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:layout_gravity="right"-->
+<!--                android:gravity="center"-->
+<!--                android:text="팔로우"-->
+<!--                android:textSize="10dp"/>-->
+
+        </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/pTagText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textSize="20dp"
-        android:gravity="left"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/pSubjectText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:layout_marginTop="5dp"
+            android:text="소프트웨어 엔지니어"
+            android:textSize="13dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <LinearLayout
+                android:id="@+id/pTagLayout1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_border_corner_round">
+
+                <TextView
+                    android:id="@+id/pTagText1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:gravity="left"
+                    android:text="개발"
+                    android:textColor="@color/pink"
+                    android:textSize="13dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/pTagLayout2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/back_border_corner_round">
+
+                <TextView
+                    android:id="@+id/pTagText2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:gravity="left"
+                    android:text="창업"
+                    android:textColor="@color/pink"
+                    android:textSize="13dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/pTagLayout3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_border_corner_round">
+
+                <TextView
+                    android:id="@+id/pTagText3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:gravity="left"
+                    android:text="풀스택"
+                    android:textColor="@color/pink"
+                    android:textSize="13dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
