--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF5722</color>
     <color name="pink">#F64668</color>
 
-    <color name="darkGray">#5C5C5C</color>
+    <color name="darkGray">#525252</color>
     <color name="lightGray">#E8E6E6</color>
     <color name="white">#FFFFFF</color>
 </resources>
